--- a/HW1/HW1.ipynb
+++ b/HW1/HW1.ipynb
@@ -1316,13 +1316,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vacant and Abandoned Buildings vs. Sanitation Code Violations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While there is a strong positive correlation between the number of vacant and abandoned buildings and unmarried women pregnancies, there is a weak positive correlation between the number of sanitation code violations and the proportion of unmarried women pregnancies."
+   ]
   }
  ],
  "metadata": {
