--- a/HW1/HW1.ipynb
+++ b/HW1/HW1.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Both the code and the report for HW1 can be found in this Jupyter Notebook.  \n",
+    "Please note: to replicate the code for geopandas, you will need to work in python 3.4 environment, as geopandas is not compatible with python 3.5 yet."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 173,
    "metadata": {
